# wamr4j

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON_TEST_PROGRESS.md  COMPLETION_SUMMARY_2025-10-22.md  DEVELOPMENT.md  IMPORT_TEST_STATUS_FINAL.md  POST_MVP_IMPLEMENTATION_SUMMARY.md  README.md  SESSION_COMPLETION_2025-10-22.md  SESSION_SUMMARY_2025-10-22.md  STATIC_ANALYSIS.md  TROUBLESHOOTING.md  checkstyle.xml  pom.xml  spotbugs-exclude.xml
.claude/: CLAUDE.md
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/initial-scafolding/: 2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/epics/initial-scafolding/updates/7/: progress.md
.claude/prds/: core-native-wamr-integration.md  initial-scafolding.md
.github/: dependabot.yml
.github/scripts/: collect-build-info.sh  setup-cross-compilation.sh  validate-native-library.sh
.github/workflows/: ci.yml  cross-platform-build.yml  dependency-update.yml  fuzz.yml  performance.yml  pr-validation.yml  release.yml  security.yml  testing.yml
docs/: PERFORMANCE.md  RELEASE_PROCEDURES.md  ROLLBACK_HOTFIX_PROCEDURES.md
eclipse/: ECLIPSE_SETUP.md
scripts/performance/: monitor-performance.py  validate-baselines.sh
scripts/release/: create-hotfix.sh  prepare-release.sh  version-bump.sh
wamr4j/: pom.xml
wamr4j-benchmarks/: pom.xml
wamr4j-benchmarks/src/main/java/ai/tegmentum/wamr4j/benchmarks/: ConcurrencyBenchmark.java  ErrorPathBenchmark.java  FunctionCallBenchmark.java  HostFunctionBenchmark.java  LargeModuleBenchmark.java  MemoryAccessBenchmark.java  MemoryOperationsBenchmark.java  RuntimeBenchmark.java  TableOperationsBenchmark.java  TypedValueBenchmark.java
wamr4j-jni/: pom.xml
wamr4j-jni/src/main/java/ai/tegmentum/wamr4j/jni/: JniRuntimeProvider.java
wamr4j-native/: CALLBACK_IMPLEMENTATION_COMPLETE.md  Cargo.toml  IMPORT_IMPLEMENTATION.md  IMPORT_IMPLEMENTATION_PROGRESS.md  MVP_COMPLETE.md  PLATFORM_OPTIMIZATIONS.md  build.rs  pom.xml  test-load  test-load.c
wamr4j-native/.cargo/: config.toml
wamr4j-native/benches/: basic_performance.rs  call_overhead.rs  memory_operations.rs  module_lifecycle.rs  value_conversion.rs
wamr4j-native/fuzz/: Cargo.toml
wamr4j-native/fuzz/corpus/module_parse/: with_memory.wasm
wamr4j-native/fuzz/fuzz_targets/: error_message.rs  execution_fuzzing.rs  ffi_roundtrip.rs  func_call.rs  memory_access.rs  memory_management.rs  module_parse.rs  module_parsing.rs
wamr4j-native/scripts/: build-all-targets.sh  validate-targets.sh
wamr4j-native/src/: bindings.rs  ffi.rs  jni_bindings.rs  lib.rs  lib_complex.rs  macros.rs  panama_bindings.rs  runtime.rs  types.rs  utils.rs  wamr_wrapper.rs
wamr4j-native/src/main/rust/: jni_bindings.rs  lib.rs  wamr_wrapper.rs
wamr4j-native/src/optimizations/: mod.rs  simd_arm64.rs
wamr4j-native/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
wamr4j-native/wamr/core/iwasm/include/: wasm_c_api.h  wasm_export.h
wamr4j-panama/: pom.xml
wamr4j-panama/src/main/java/ai/tegmentum/wamr4j/panama/: PanamaRuntimeProvider.java
wamr4j-tests/: IMPORT_TEST_INFRASTRUCTURE_COMPLETE.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_STATUS.md  PHASE_4B_STATUS.md  PHASE_4C_STATUS.md  PHASE_4D_PROGRESS.md  PHASE_4D_STATUS.md  PHASE_4_STATUS.md  PHASE_5_PROGRESS.md  PHASE_5_STATUS.md  PHASE_6_FINAL_SUMMARY.md  PHASE_6_PROGRESS.md  PHASE_6_STATUS.md  README.md  TESTING.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_SUMMARY.md  download-testsuite.sh  pom.xml
wamr4j-tests/fuzz/: pom.xml
wamr4j-tests/src/test/java/ai/tegmentum/wamr4j/test/: AbstractRuntimeTest.java  RuntimeProviderTest.java
wamr4j-tests/src/test/resources/: logging-verbose.properties  logging.properties
wamr4j/src/main/java/ai/tegmentum/wamr4j/: ElementKind.java  FunctionSignature.java  HostFunction.java  PackageType.java  RunningMode.java  RuntimeFactory.java  ValueType.java  WamrInstanceExtensions.java  WamrRuntimeExtensions.java  WasiConfiguration.java  WebAssemblyFunction.java  WebAssemblyInstance.java  WebAssemblyMemory.java  WebAssemblyModule.java  WebAssemblyRuntime.java  WebAssemblyTable.java
wamr4j/src/main/java/ai/tegmentum/wamr4j/exception/: CompilationException.java  RuntimeException.java  ValidationException.java  WasmRuntimeException.java  WebAssemblyException.java
wamr4j/src/main/java/ai/tegmentum/wamr4j/internal/: NativePlatform.java
wamr4j/src/main/java/ai/tegmentum/wamr4j/spi/: RuntimeProvider.java
(+76 files in other folders)
