[package]
name = "wamr4j-native"
version = "1.0.0"
edition = "2021"
description = "Shared native library for wamr4j JNI and Panama FFI bindings"
license = "Apache-2.0"
repository = "https://github.com/tegmentum/wamr4j"

[lib]
name = "wamr4j_native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.21"
libc = "0.2"
# wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk" }
# TODO: Re-enable WAMR SDK once LLVM configuration is set up

[build-dependencies]
cc = "1.0"
cmake = "0.1"

# Cross-compilation targets
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-apple-darwin]
linker = "clang"

[target.aarch64-apple-darwin]
linker = "clang"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"