[package]
name = "wamr4j-native"
version = "1.0.0"
edition = "2021"
description = "Shared native library for wamr4j JNI and Panama FFI bindings"
license = "Apache-2.0"
repository = "https://github.com/tegmentum/wamr4j"

[lib]
name = "wamr4j_native"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
jni = "0.21"
libc = "0.2"
once_cell = "1.19"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = { version = "0.72", optional = true }

[features]
default = []
bindgen = ["dep:bindgen"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
overflow-checks = true

[profile.dev]
panic = "abort"
