[package]
name = "wamr4j-native-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.wamr4j-native]
path = ".."

[[bin]]
name = "module_parsing"
path = "fuzz_targets/module_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "execution_fuzzing"
path = "fuzz_targets/execution_fuzzing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "memory_management"
path = "fuzz_targets/memory_management.rs"
test = false
doc = false
bench = false
